# clsprop

./: .gitignore  404.html  README.md  clsprop.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  test_clsprop.py
.github/workflows/: python-package.yml
clsprop/: __init__.py
docs/: index.md
