[project]
name = "clsprop"
version = "1.3.1"
description = "ðŸ« Just like @property but for classes ðŸ«"
authors = [{ name = "Tom Ritchford", email = "tom@swirly.com" }]
requires-python = ">=3.10"
readme = "README.md"
license = "MIT"
classifiers = ["Programming Language :: Python :: 3", "Programming Language :: Python :: 3.10", "Programming Language :: Python :: 3.11", "Programming Language :: Python :: 3.12", "Programming Language :: Python :: 3.13", "Programming Language :: Python :: 3.14"]

[project.urls]
Homepage = "https://github.com/rec/clsprop"
Repository = "https://github.com/rec/clsprop"
Documentation = "https://rec.github.io/clsprop"

[dependency-groups]
dev = [
    "ruff",
    "pytest",
    "coverage>=7.13.2",
    "pyupgrade>=3.21.2",
    "ty>=0.0.14",
]

[tool.uv]

[tool.uv.build-backend]
module-root = ""


[tool.coverage]
[build-system]
requires = ["uv_build>=0.9.0,<0.10.0"]
build-backend = "uv_build"


[tool.ruff]
line-length = 88

[tool.ruff.format]
quote-style = "single"

