[project]
name = "clsprop"
version = "1.5.0"
description = "🏫 Just like @property but for classes 🏫"
authors = [{ name = "Tom Ritchford", email = "tom@swirly.com" }]
requires-python = ">=3.10"
readme = "README.md"
license = "MIT"
classifiers = ["Programming Language :: Python :: 3", "Programming Language :: Python :: 3.10", "Programming Language :: Python :: 3.11", "Programming Language :: Python :: 3.12", "Programming Language :: Python :: 3.13", "Programming Language :: Python :: 3.14"]

[project.urls]
Homepage = "https://github.com/rec/clsprop"
Repository = "https://github.com/rec/clsprop"
Documentation = "https://rec.github.io/clsprop"

[dependency-groups]
dev = [
    "ruff",
    "pytest",
    "coverage>=7.13.2",
    "pyupgrade>=3.21.2",
    "ty>=0.0.14",
]

[tool.coverage]
[tool.ruff]
line-length = 88

[tool.ruff.format]
quote-style = "single"


[tool.poetry]
name = "clsprop"
version = "1.5.0"
description = "🏫 Just like @property but for classes 🏫"
authors = ["Tom Ritchford <tom@swirly.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10"


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
